--- a/Expressions_Worksheet/index.html
+++ b/Expressions_Worksheet/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head> 
-		<title>Slice of Pie Part II</title>
+		<title>Expressions Worksheet</title>
 		<link rel="stylesheet" href="css/styles.css" type="text/css" />
 	</head>
 	<body>
